# AuthService

./: .env.example  README.md  main.py  pyproject.toml  test.db
src/: config.py
src/api/dependencies/: user.py
src/api/handlers/: admin_handlers.py  mock_handlers.py  user_handlers.py
src/api/schemas/: delete.py  edit_profile.py  login.py  mock.py  register.py
src/api/services/: user.py  utils.py
src/auth/: jwt.py
src/db/: engine.py  model_user.py  roles.py  uow.py
src/infra/repositories/: base.py  user.py
